samples/_failures_safe/1761602879_e42a16_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_60424287.c: In function ‘main’:
./samples/SAFE/__tmp_60424287.c:162:5: error: expected expression at end of input
  162 |     mat2.rows =
      |     ^~~~
./samples/SAFE/__tmp_60424287.c:162:5: error: expected declaration or statement at end of input
